2008-09-02 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/Bug.py: Added support for field "changes" from SourceForge
	HTML (bug's history)
	* Bicho/SqlBug.py: Added support for bug's history, new table for
	sqlite, mysql and postgres
	* Bicho/backends/sf.py: "Changes" are added
	* Bicho/backends/ParserSFBugs.py: The statets machine was modified.
	Now "changes" HTML is supported

	Changes from SourceForge HTML is now recorded and stored in the
	database


2007-10-29 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/backends/ParserSFBugs.py: Fixed [#330] Error parsing information from a bug in SourceForge

	Fixed: [#330] Error parsing information from a bug in SourceForge


2007-10-25 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/backends/ParserSFBugs.py: Added source code to unify in the same file SourceForge parser functionality
	* Bicho/backends/HTMLUtils.py: Used just for HTML Utils (join urls and so on)
	* Bicho/backends/sf.py: Parser for getting links was renamed

	Unification of SourceForge parser in just one file


2007-10-13 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/utils.py: Added path option (to store dowloaded web pages)
	* Bicho/bicho.conf: Added path option (by default /tmp/bicho/)
	* Bicho/backends/sf.py: Store web pages functionality added 
	* Bicho/main.py: Path option added

	Bicho stores downloaded web pages


2007-09-10 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* configure.in:

	Release 0.1


2007-09-10 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/bicho.conf: config file added

	Added config file


2007-09-09 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/Bug.py: Added Attachment class
	* Bicho/SqlBug.py: Added support for new class Attachment (class storm
	DBAttachment and sql queries to create table Attachment in mysql,
	postgres and sqlite)